--- a/views/index.jade
+++ b/views/index.jade
@@ -5,4 +5,4 @@ block content
     h1= title
     p Welcome to #{title}
 
-  script(type='text/jsx;harmony=true', src='/react/index.js')
+  script(type='text/jsx;harmony=true', src='/index.js')
